# TelegramNeuroCoach

./: .replit  README.md  bot.py  models.py  pyproject.toml  server.py
attached_assets/: Pasted-It-sounds-like-the-calendar-dates-are-not-properly-linking-to-the-selected-mood-color-Let-s-trouble-1735319522881.txt  Pasted-To-change-the-colors-in-the-calendar-based-on-the-selected-mood-color-you-ll-need-to-update-the-CSS-1735319055512.txt  Pasted-To-change-the-colors-in-the-calendar-based-on-the-selected-mood-color-you-ll-need-to-update-the-CSS-1735319382929.txt
static/: app.js  styles.css
templates/: index.html
