[project]
name = "repl-nix-telegramminihello"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-sqlalchemy>=1.1.0",
    "aiohttp>=3.11.11",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=21.9",
    "telegram>=0.0.1",
    "sqlalchemy>=2.0.36",
]
